# conf-provider

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  Justfile  docker-compose.yaml  entrypoint.sh  install.md  readme.md  todo
.github/workflows/: build.yaml  release.yml
example/: .konf  a.yaml  b.yaml  c.yaml  d.yaml
example/common/: database.yaml
example/services/api/: config.yaml  config_v2.yaml
example/services/worker/: config.yaml
konf-lsp/: .gitignore  Cargo.toml  README.md  justfile
konf-lsp/src/: completion.rs  diagnostics.rs  main.rs  parser.rs  workspace.rs
konf-lsp/tests/: completion_tests.rs
konf-lsp/vscode-extension/: LICENSE  README.md  language-configuration.json  package.json  tsconfig.json
konf-lsp/vscode-extension/src/: extension.ts
konf-lsp/vscode-extension/syntaxes/: konf-yaml.tmLanguage.json
src/: cache_helper.rs  cli.rs  config.rs  git_routes.rs  imports.rs  lib.rs  loader.rs  local_routes.rs  main.rs  main_git.rs  main_local.rs  metrics.rs  render.rs  render_cli.rs  render_helper.rs  telemetry.rs  utils.rs
src/authorizer/: mod.rs
src/fs/: fs.rs  git.rs  local.rs  mod.rs
src/functions/: default.rs  encoding.rs  mod.rs  string.rs
src/loaders/: yaml.rs
src/lsp/: completion.rs  diagnostics.rs  mod.rs  parser.rs  workspace.rs
src/writer/: docker_env.rs  env.rs  json.rs  mod.rs  properties.rs  toml.rs  yaml.rs
tests/: e2e_git.rs  e2e_local_server.rs  nested_configs.rs  unit_tests.rs
