[package]
name = "konf-provider"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.6.6", features = ["trace"] }
anyhow = "1.0.99"
thiserror = "2.0.16"
xitca-web = { version = "0.7.0", features = [
    "json",
    "logger",
    "tower-http-compat",
    "params",
] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1" }
serde_yaml = "0.9.34"
arc-swap = "1.7.1"
futures = "0.3.31"
async-once-cell = "0.5"
tokio = { version = "1.47.1", features = ["full"] }
dashmap = "6.1.0"
git2 = { version = "0.18", features = ["vendored-openssl"] }
sha2 = "0.10"
hex = "0.4"
clap = {version = "4.5.45", features = ["derive", "env"]}
toml = "0.9.5"
regex = "1.11.2"
urlencoding = "2.1"
base64 = "0.22"
metrics = "0.24"
metrics-exporter-prometheus = "0.16"
tracing-opentelemetry = "0.28"
opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tonic"] }

[dev-dependencies]
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"] }

[profile.release]
strip = true
lto = true
codegen-units = 1


[[bin]]
name = "cache"
path = "src/cache_helper.rs"


[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "render"
path = "src/render_cli.rs"
