[package]
name = "konf-lsp"
version = "0.1.0"
edition = "2024"
description = "Language Server Protocol implementation for konf-provider YAML configs"
authors = ["konf-provider team"]

[dependencies]
# LSP
tower-lsp = "0.20"
tokio = { version = "1", features = ["full", "sync"] }

# Parsing
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Konf base lib (for shared utilities)
konf-provider = { path = ".." }

# Utils
regex = "1"
dashmap = "6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
walkdir = "2"

[profile.release]
strip = true
lto = true
codegen-units = 1
